src/test/ui/parser/keyword-override.rs
fn main() {
    let override = (); //~ ERROR expected pattern, found reserved keyword `override`
}
